--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import "tailwindcss";
+
+@theme {
+
+    --font-anonymouspro: "Anonymous Pro", sans-serif;
+
+    --color-cream-container: #FFF98B;
+    --color-cream-buttons: #FFC150;
+    --color-white-fields: #F2F2F2;
+    --color-black-text: #171717;
+}
