layer: added newly used attributes

--- a/public/style.css
+++ b/public/style.css
@@ -206,11 +206,17 @@
   .h-screen {
     height: 100vh;
   }
+  .max-h-\[300px\] {
+    max-height: 300px;
+  }
   .w-\[20px\] {
     width: 20px;
   }
   .w-\[90px\] {
     width: 90px;
+  }
+  .w-\[290px\] {
+    width: 290px;
   }
   .w-\[300px\] {
     width: 300px;
@@ -248,6 +254,9 @@
   .gap-\[15px\] {
     gap: 15px;
   }
+  .overflow-y-auto {
+    overflow-y: auto;
+  }
   .rounded-\[15px\] {
     border-radius: 15px;
   }
@@ -273,6 +282,15 @@
   }
   .bg-white-fields {
     background-color: var(--color-white-fields);
+  }
+  .px-\[5px\] {
+    padding-inline: 5px;
+  }
+  .px-\[10px\] {
+    padding-inline: 10px;
+  }
+  .px-\[15px\] {
+    padding-inline: 15px;
   }
   .px-\[60px\] {
     padding-inline: 60px;
